# nanosnap

./: CMakeLists.txt  README.md  vcsetup.bat
doc/: Doxyfile
include/: nanosnp.h
include/nanosnap/: fft.h  nanosnap.h
scripts/: bootstrap-linux.sh
src/: audio_wav.cc  fastBPE.hpp  fft.cc  image.cc  mel.cc  nanocsv.h  ndarray.cc  pocketfft.c  pocketfft.h  rng.cc  signal.cc  speech_features.cc  stack_vector.h  text-load-save.cc
tests/: test_audio.cc  test_convolve.cc  test_ifft.cc  test_librosa_filters_mel.cc  test_librosa_istft.cc  test_librosa_stft.cc  test_medfilt1.cc  test_random_uniform.cc  test_rfft.cc  test_signal_get_window_hann.cc  test_speech_features.cc
tests/assets/: README.md
tests/testvector/: convolve_full.inc  convolve_same.inc  convolve_valid.inc  ifft.inc  librosa_filters_mel.inc  librosa_istft.inc  librosa_stft.inc  lifter.inc  medfilt1.inc  random_normal.inc  random_uniform.inc  rfft.inc  signal_get_window_hann.inc
